deployment/text-classifier/eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: text-classifier
  namespace: text-classifier
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: <ELB_PUBLIC_DNS_NAME>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: text-classifier-service
            port:
              number: 8000
